# yggdrasil

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  TODO.md  docker-compose.development.yml  docker-compose.yml  otel-collector-config.example.yaml  otel-collector-config.yaml
.sqlx/: query-03922429d0274f9cc2780a824a0f142f422bcf445ab038f346f9525f1c4b81c4.json  query-05554ecfead1e1ac5227c409352887c2d3d86590b56baa5601e17ac278e0c657.json  query-0ddea7f6bda180343bcd03cbacb18f4bdbd222babcd026ea6c291f5fe7460813.json  query-113db0b9a8cf44793da08f34823fdf1089b30c6ed12074de4073bde88c98bbd8.json  query-1abad20c9cb4eccc537ac8783a1d905fb29ffdf7ddc36ca743c6e0a0912aac3c.json  query-20c4bd84cb5ab0c00fdcc91b6bf95bbc6261e5adbc109ba66e4ea8e6721ca2f9.json  query-22c74e38c8f37cbcb6aa2375edb3970f6f9c993b9f976fd9e06b6c07536fc569.json  query-242a6412173f18994b99fe10329b3b51b2f53609108da6eddc53521d48bdeb8f.json  query-26523f60d080708786e8a751e1ca6a4e21ca2559dc6916c6d62842e5b6128972.json  query-2cb43ac6de45ccb2c302a16ccf3d202158cbbbb89971694db6ed2822db6251b2.json  query-2f230d16af9b3bcc5f4373899b4c5459fbcc2b25a39a47af5a055b8a114a8bcf.json  query-33ba00f93e96b780e4bf3b6d3c3486aacbf9f6b8083d852abe41f9e9f94f03c7.json  query-342f2363adbd8eb0020dfbf37f9a240224e510538a76afdc284afe6e120fd7b9.json  query-3873c18bf92c425fc1e0617ae182bd300b057bec493b49916151039d6df21c6c.json  query-3ffe76a3ad38e71d7ca339fdb57587bd00b0a68cf97c75dea815a76a5ad1a748.json  query-493db849459813d95c3fc3cfc4f8e16bf8754ed1d46cac1dc37755589a69dee9.json  query-4a3021d761c7d2aff0402649b13b75bfad9cd2b2eebc28815f445253914c0fea.json  query-4a4654f4273ab968a1935a057f88b51d99486c0d1ab3ebfd62ef24cb7f004322.json  query-56578a300bbe078804fb689093f3c116695a4ca2529a77bdafa578eae47ee76b.json  query-571e92f3357fa9a475836d0f8c32bf15fc5b8bf1f1de7f74a2d72d00be0fe5aa.json  query-66ef789b6ba751904d309e017e33935ad2b7eec529d7e5fe800f808f1f8e3132.json  query-691ca09823acce79260173c62789ab2eeeceef559850a6e7ff73d0913bd2ef5c.json  query-6f349b89c085694f6a141933ce849b7b0a6a3f1f9ec4a082b27d3dbccb3316a7.json  query-71adbd96bc1aa6779b25c4cdc05b17c9a2e7c12a2f9e6e0322dc3bd01cfe403b.json  query-762a9aeb0bfd870e545046e8ee95fb73591dbf155770205aa113a73f5abdcddc.json  query-782361becb1d2330e5bfcc7dc337e56b9ac3263a85e6819255fa775d7b043feb.json  query-7b4cacebf63a658f7ec7094c87d0fa1dacea8af7a825b56ba0786420d70a2e38.json  query-833c09a714eec35e78a4f6aa91f87b6fedbc524af9a66ff12f43b49a2ee1ef1f.json  query-8986bbea229c59e2322c4c0ece0f0f66652e8a0283ca5969e8c3e8ec6858712d.json  query-903564872bf74933ba2f09493e601cbfab3163b4b06e4f75466c9f7f99f580a8.json  query-95cc509a7d2befd7061cd2e70e31b93e37eca0700fc7e8c4859858d7c8732231.json  query-9723bdc12dcaffb29f8c3baa553893f4a65fab69cddb5e73186635baf8fa040e.json  query-99e9c826a764e9132eb399f69fab1f46f7abdacb513a5e6968fe184a8b5b3386.json  query-9f977d742c746e542551ccb01df4cb5a5079d299b1fd133d90fe41a1cf4ae038.json  query-a23b3be7b217b138af5202d5c356fd9ea96240fb6c60cc6ec12cbed70df7aff5.json  query-a92977214ab6a5f5a76ab810fb5438b502f886affe4dfcefd2aed5a779ce67ed.json  query-af01c37581f95477647a03349e38b0528a29921f5454d69e84e16bc667d39561.json  query-b2f4c02b70f56993bb7f48283f886dd75c43fa5195537729d883f4aa95b311ff.json  query-b31d336da2856889197c3622d13ea846974e1fade20b1f79e0f0cd1108401f69.json  query-b600254dfaf1aff2fdf4f4157d9d925c1e891cc10a37811c714663103445995f.json  (+12 more)
app/: Cargo.toml
app/src/: main.rs
config/: Cargo.toml
dao/: Cargo.toml
dao/src/: ban_word_filter.rs  chat_settings.rs  database.rs  lib.rs  token.rs  twitch_data.rs  user.rs
migrations/: 20230915112512_initial.down.sql  20230915112512_initial.up.sql  20230920035508_ban-word-filters.down.sql  20230920035508_ban-word-filters.up.sql  20230921183038_chat-settings.down.sql  20230921183038_chat-settings.up.sql  20231012120559_ban-word-filter-set-null-on-delete.down.sql  20231012120559_ban-word-filter-set-null-on-delete.up.sql
service/: Cargo.toml
service/src/: auth.rs  ban_word.rs  chat.rs  lib.rs  session.rs  twitch.rs
twitch_api/: Cargo.toml
twitch_api/src/: api.rs  consts.rs  lib.rs
twitch_api/src/domain/: app_access_token.rs  badge.rs  badge_set.rs  emote.rs  get_app_access_token_response.rs  get_badges_response.rs  get_emotes_response.rs  get_user_info_response.rs  get_user_token_response.rs  mod.rs  scope.rs
types/: Cargo.toml
types/src/: app_error.rs  lib.rs
types/src/domain/: mod.rs
types/src/domain/ban_word/: entity.rs
types/src/domain/ban_word_filter/: entity.rs
types/src/domain/chat_settings/entity/: chat_color_settings.rs  chat_font_settings.rs  chat_hide_settings.rs  chat_settings.rs  chat_settings_info.rs  chat_size_settings.rs  chat_type.rs  custom_nickname.rs  mod.rs  update_chat_color_settings.rs  update_chat_font_settings.rs  update_chat_hide_settings.rs  update_chat_settings.rs  update_chat_size_settings.rs  update_custom_nickname.rs
types/src/domain/token/: entity.rs
types/src/domain/user/: entity.rs
types/src/error/: app_error.rs  mod.rs  validation_errors.rs
types/src/twitch/: mod.rs
types/src/twitch/badge/: entity.rs
types/src/twitch/data/: entity.rs  mod.rs
types/src/twitch/emote/: entity.rs
types/src/twitch/user_info/: entity.rs
utils/: Cargo.toml
utils/src/: crypt.rs  jwt.rs  lib.rs
web_server/: Cargo.toml
web_server/src/: lib.rs
web_server/src/middleware/: auth.rs  error.rs  mod.rs  trace.rs
web_server/src/routes/: mod.rs
web_server/src/routes/auth/: authorize.rs  exchange.rs  logout.rs  mod.rs  refresh.rs
web_server/src/routes/auth/sessions/: all.rs  delete.rs  delete_all_exclude_current.rs  mod.rs
web_server/src/routes/v1/: mod.rs
web_server/src/routes/v1/ban_word_filters/: all.rs  create.rs  delete.rs  mod.rs  one.rs  update.rs
web_server/src/routes/v1/chat_settings/: all.rs  create.rs  delete.rs  mod.rs  one.rs  update.rs
web_server/src/routes/v1/twitch/: mod.rs
web_server/src/routes/v1/twitch/badges/: channel.rs  global.rs
web_server/src/routes/v1/twitch/emotes/: channel.rs  global.rs
web_server/src/routes/v1/twitch/user/: user_info.rs
(+97 files in other folders)
