[workspace]
resolver = "2"
members = [
    'app',
    'config',
    'dao',
    'service',
    'twitch_api',
    'types',
    'utils',
    'web_server'
]

[workspace.dependencies]
# System
anyhow = "1.0"
rand = "0.8"
# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Validation
validator = { version = "0.16", features = ["derive"] }
# Data Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
jsonwebtoken = "8"
# Web
axum = { version = "0.6", features = ["tokio", "json", "headers"] }
# Crypt
magic-crypt = "3.1"
# Testing
fake = { version = "2.8", features = ["derive", "serde_json", "chrono", "uuid"] }
