[package]
name = "app"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal
config = { workspace = true }
dao = { workspace = true }
service = { workspace = true }
twitch_api = { workspace = true }
types = { workspace = true }
utils = { workspace = true }
web_server = { workspace = true }
# Utilities
tokio = { workspace = true }
