[package]
name = "dao"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal
config = { workspace = true }
types = { workspace = true }
utils = { workspace = true }
# Types
chrono = { workspace = true }
uuid = { workspace = true }
# Axum
axum = { workspace = true }
# Database
sqlx = { workspace = true }
