[package]
name = "service"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal
config = { workspace = true }
dao = { workspace = true }
#service = { path = "service" }
twitch_api = { workspace = true }
types = { workspace = true }
utils = { workspace = true }
#web_server = { path = "web_server" }
# Serde
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
# Types
#chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true }
# Axum
axum = { version = "0.6", features = ["tokio", "json", "headers"] }
# Database
#sqlx = { version = "0.7", features = [
#    "runtime-tokio",
#    "postgres",
#    "migrate",
#    "uuid",
#    "json",
#    "chrono",
#] }
# Security
#jsonwebtoken = "8"
#magic-crypt = "3.1"
#validator = { version = "0.16", features = ["derive"] }
# Observability
#tracing = "0.1"
# Testing
#fake = { version = "2.8", features = ["derive", "serde_json", "chrono", "uuid"] }
# Utilities
#dotenvy = "0.15"
#anyhow = "1.0"
#rand = "0.8"
#reqwest = { version = "0.11", features = ["json"] }
#tokio = { version = "1.32", features = ["full"] }
