[package]
name = "service"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal
config = { workspace = true }
dao = { workspace = true }
twitch_api = { workspace = true }
types = { workspace = true }
utils = { workspace = true }
# Types
uuid = { workspace = true }
# Axum
axum = { version = "0.6", features = ["tokio", "json", "headers"] }
# Observability
tracing = { workspace = true }
