[package]
name = "twitch"
version = "1.0.0"
edition = "2021"

[dependencies]
# System
reqwest = { workspace = true }
# Serde
serde = { workspace = true }
# Data Types
chrono = { workspace = true }
config = { path = "../config" }
types = { path = "../types" }
# Web
axum = { workspace = true }
# Observability
tracing = { workspace = true }
