[package]
name = "twitch_api"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal
config = { workspace = true }
types = { workspace = true }
# Serde
serde = { workspace = true }
# Types
chrono = { workspace = true }
# Axum
axum = { workspace = true }
# Observability
# Utilities
reqwest = { workspace = true }
