[package]
name = "types"
version = "1.0.0"
edition = "2021"

[dependencies]
# System
anyhow = { workspace = true }
# Serde
serde = { workspace = true }
serde_json = { workspace = true }
# Validation
validator = { workspace = true }
# Data Types
chrono = { workspace = true }
uuid = { workspace = true }
# Web
axum = { workspace = true }