[package]
name = "types"
version = "1.0.0"
edition = "2021"

[dependencies]
# Serde
serde = { workspace = true }
serde_json = { workspace = true }
# Types
chrono = { workspace = true }
uuid = { workspace = true }
# Axum
axum = { workspace = true }
# Security
validator = { workspace = true }
# Utilities
anyhow = { workspace = true }
