[package]
name = "utils"
version = "1.0.0"
edition = "2021"

[dependencies]
# System
anyhow = { workspace = true }
rand = { workspace = true }
# Serde
serde = { workspace = true }
# Validation
validator = { workspace = true }
# Data Types
chrono = { workspace = true }
uuid = { workspace = true }
types = { path = "../types" }
jsonwebtoken = { workspace = true }
# Web
axum = { workspace = true }
# Crypt
magic-crypt = { workspace = true }

[dev-dependencies]
fake = { workspace = true }