[package]
name = "utils"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal
types = { workspace = true }
# Serde
serde = { workspace = true }
# Types
chrono = { workspace = true }
uuid = { workspace = true }
# Axum
axum = { workspace = true }
# Security
jsonwebtoken = { workspace = true }
magic-crypt = { workspace = true }
validator = { workspace = true }
# Observability
tracing = { workspace = true }
# Utilities
anyhow = { workspace = true }
rand = { workspace = true }
