[package]
name = "web_server"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal
config = { workspace = true }
service = { workspace = true }
types = { workspace = true }
# Serde
serde = { workspace = true }
serde_json = { workspace = true }
# Axum
axum = { workspace = true }
# Observability
tracing = { workspace = true }
# Utilities
tokio = { workspace = true }

