[package]
name = "web_server"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal
config = { workspace = true }
service = { workspace = true }
types = { workspace = true }
utils = { workspace = true }
# Serde
serde = { workspace = true }
serde_json = { workspace = true }
# Types
uuid = { workspace = true }
# Axum
axum = { workspace = true }
axum-client-ip = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-service = { workspace = true }
# Security
validator = { workspace = true }
# Observability
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_api = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
# Utilities
tokio = { workspace = true }
futures-util = { workspace = true }
pin-project = { workspace = true }

